creusot/tests/should_fail/prusti/calls/need_static.stderr
error: the expression's lifetime `'a` must match the current time slice `'static` (found `&'a X`, expected `&'static _`)
  --> need_static.rs:13:17
   |
13 |     need_static(x)
   |                 ^

error: aborting due to 1 previous error

